special offer section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="#"><img src="/img/logo.png" alt="logo" /></a>
+                    <a href="#"><img src="/img/logo.png" alt="Logo" /></a>
                 </div>
                 <nav>
                     <div class="btn">
@@ -52,7 +52,7 @@
     <main id="showcase">
         <div class="container">
             <div class="content">
-                <img src="/img/logo.png" alt="asd" />
+                <img src="/img/logo.png" alt="Logo" />
                 <h2>SURPRISE YOUR PLATE</h2>
                 <h3>Fine Food + Drinks</h3>
             </div>
@@ -61,7 +61,74 @@
 
     <!-- Special Offer -->
 
-    <aside id="">
+    <aside id="sp_offer">
+        <div class="container">
+            <div class="sp_content">
+                <div class="left_side_content">
+                    <div class="headings">
+                        <h3>From The Menu</h3>
+                        <h2>SPECIAL OFFERS</h2>
+                    </div>
+                    <div class="imgs_content">
+                        <div class="imgs">
+                            <img src="/img/pasta.webp" alt="pasta">
+                            <div class="content_for_img">
+                                <h4>Pring Veg & Pasta</h4>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis non quidem
+                                    nemo suscipit,
+                                    consequuntur voluptatum.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="price">
+                            <p>$12</p>
+                        </div>
+                    </div>
+                    <div class="imgs_content">
+                        <div class="imgs">
+                            <img src="/img/tomato-salad.jpeg" alt="tomato-salad">
+                            <div class="content_for_img">
+                                <h4>Tomato Salad</h4>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis non quidem
+                                    nemo suscipit,
+                                    consequuntur voluptatum.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="price">
+                            <p>$10</p>
+                        </div>
+                    </div>
+                    <div class="imgs_content">
+                        <div class="imgs">
+                            <img src="/img/swiss-food-rosti.jpg" alt="swiss food rosti">
+                            <div class="content_for_img">
+                                <h4>Swiss Food Rosti</h4>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis non quidem
+                                    nemo suscipit,
+                                    consequuntur voluptatum.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="price">
+                            <p>$14</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right_side_content">
+                    <div class="img_right_side">
+                        <img src="/img/meals.jpg" alt="Meals">
+                        <div class="over_img">
+                            <a href="#"><h2>Menus</h2></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </aside>
 
