reservation form section

--- a/index.html
+++ b/index.html
@@ -129,8 +129,28 @@
                 </div>
             </div>
         </div>
-
     </aside>
+
+    <!-- Reservation section -->
+
+    <div id="reservation_tbl">
+        <div class="container">
+            <div class="form_data">
+                <h3 class="normal_heading">Your Table</h3>
+                <h2 class="main_heading">Reservation Now..</h2>
+                <form action="#">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Contact Number">
+                    <input type="email" placeholder="Email Address">
+                    <input type="number" placeholder="Number of Person">
+                    <input type="date" placeholder="Book Date">
+                    <input type="text" placeholder="Your Time">
+                    <textarea name="" id="" cols="10" rows="10" placeholder="Message Request"></textarea>
+                    <button type="button">Book Now</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/script.js"></script>
