--- a/index.html
+++ b/index.html
@@ -165,32 +165,101 @@
             <h2 class="main_heading">TODAY SPECIAL DISH</h2>
             <div class="card_content swiper-wrapper">
                 <div class="cards swiper-slide">
-                    <img src="" alt="asdasd">
-                    <h4>Pring Veg & Pasta</h4>
+                    <img src="/img/dish1.jpg" alt="Pizza">
+                    <h4>Pizza</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum distinctio dignissimos nihil consequuntur modi rem?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum distinctio dignissimos nihil
+                        consequuntur modi rem?
                     </p>
-                    <p class="price">Only 25$</p>
+                    <p class="price">Only 20$</p>
                 </div>
                 <div class="cards swiper-slide">
-                    <img src="" alt="asdasd">
-                    <h4>Pring Veg & Pasta</h4>
+                    <img src="/img/dish2.jpg" alt="Sandwich">
+                    <h4>Sandwich POPULAR</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eos nisi, explicabo dolore praesentium cum.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eos nisi, explicabo dolore
+                        praesentium cum.
                     </p>
-                    <p class="price">Only 25$</p>
+                    <p class="price">Only 15$</p>
                 </div>
                 <div class="cards swiper-slide">
-                    <img src="" alt="asdasd">
-                    <h4>Pring Veg & Pasta</h4>
+                    <img src="/img/dish3.jpg" alt="Roast Chicken">
+                    <h4>Roast Chicken</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione magnam consequuntur fugit, sit corporis fuga.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione magnam consequuntur fugit, sit
+                        corporis fuga.
                     </p>
                     <p class="price">Only 25$</p>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
         </div>
+
+        <!-- Food Lover Section -->
+
+        <section id="food_lover">
+            <div class="container">
+                <h3 class="normal_heading-1">Food Lover</h3>
+                <h2 class="main_heading">RESTURANT MENU</h2>
+                <div class="food_lover_container">
+                    <div class="btn_container">
+                        <button type="button" class="btn-cat active_btn">All Dishes</button>
+                        <button type="button" class="btn-cat">Dinner</button>
+                        <button type="button" class="btn-cat">Lunch</button>
+                        <button type="button" class="btn-cat">Drinks</button>
+                        <button type="button" class="btn-cat">Starter</button>
+                    </div>
+                    <div class="menu_items_container">
+                        <div class="img_cards">
+                            <img src="/img/dinner1.jpeg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/dinner2.jpg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/dinner3.jpg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/lunch1.webp" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/lunch2.jpg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/lunch3.jpg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/drink1.png" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/drink2.png" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                        <div class="img_cards">
+                            <img src="/img/drink3.jpg" alt="asdasd">
+                            <p class="price">Only on 25 Dollars</p>
+                            <p>Chicken and Cashews</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script>
