food lover section functionality

--- a/index.html
+++ b/index.html
@@ -203,58 +203,14 @@
                 <h2 class="main_heading">RESTURANT MENU</h2>
                 <div class="food_lover_container">
                     <div class="btn_container">
-                        <button type="button" class="btn-cat active_btn">All Dishes</button>
-                        <button type="button" class="btn-cat">Dinner</button>
-                        <button type="button" class="btn-cat">Lunch</button>
-                        <button type="button" class="btn-cat">Drinks</button>
-                        <button type="button" class="btn-cat">Starter</button>
+                        <button type="button" class="btn-cat active_btn" data-id="all">All Dishes</button>
+                        <button type="button" class="btn-cat" data-id="Dinner">Dinner</button>
+                        <button type="button" class="btn-cat" data-id="Lunch">Lunch</button>
+                        <button type="button" class="btn-cat" data-id="Drinks">Drinks</button>
+                        <button type="button" class="btn-cat" data-id="Starter">Starter</button>
                     </div>
                     <div class="menu_items_container">
-                        <div class="img_cards">
-                            <img src="/img/dinner1.jpeg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/dinner2.jpg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/dinner3.jpg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/lunch1.webp" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/lunch2.jpg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/lunch3.jpg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/drink1.png" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/drink2.png" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
-                        <div class="img_cards">
-                            <img src="/img/drink3.jpg" alt="asdasd">
-                            <p class="price">Only on 25 Dollars</p>
-                            <p>Chicken and Cashews</p>
-                        </div>
+    
                     </div>
                 </div>
             </div>
