customer review section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div id="deal_today">
         <div class="container swiper mySwiper">
             <h3 class="normal_heading-1">Deal Today</h3>
-            <h2 class="main_heading">TODAY SPECIAL DISH</h2>
+            <h2 class="main_heading-1">TODAY SPECIAL DISH</h2>
             <div class="card_content swiper-wrapper">
                 <div class="cards swiper-slide">
                     <img src="/img/dish1.jpg" alt="Pizza">
@@ -200,7 +200,7 @@
         <section id="food_lover">
             <div class="container">
                 <h3 class="normal_heading-1">Food Lover</h3>
-                <h2 class="main_heading">RESTURANT MENU</h2>
+                <h2 class="main_heading-1">RESTURANT MENU</h2>
                 <div class="food_lover_container">
                     <div class="btn_container">
                         <button type="button" class="btn-cat active_btn" data-id="all">All Dishes</button>
@@ -210,11 +210,45 @@
                         <button type="button" class="btn-cat" data-id="Starter">Starter</button>
                     </div>
                     <div class="menu_items_container">
-    
+
                     </div>
                 </div>
             </div>
+        </section>
 
+        <!-- Customer Feedback Section -->
+
+        <section id="customer_feedback">
+            <div class="container swiper mySwiper">
+                <h3 class="normal_heading-1">Food Lover</h3>
+                <h2 class="main_heading">CUSTOMER FEEDBACK</h2>
+                <div class="customer_cards_container swiper-wrapper">
+                    <div class="customer_card swiper-slide">
+                        <img src="/img/customer-1.jpg" alt="Customer">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti earum
+                            id tenetur doloremque laborum laudantium assumenda nesciunt.
+                        </p>
+                        <p class="name">Anna Van</p>
+                    </div>
+                    <div class="customer_card swiper-slide">
+                        <img src="/img/customer-2.jpg" alt="Customer">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti earum
+                            id tenetur doloremque laborum laudantium assumenda nesciunt.
+                        </p>
+                        <p class="name">William Hill</p>
+                    </div>
+                    <div class="customer_card swiper-slide">
+                        <img src="/img/customer-3.jpg" alt="Customer">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti earum
+                            id tenetur doloremque laborum laudantium assumenda nesciunt.
+                        </p>
+                        <p class="name">Carl Riggs</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
