upcoming events section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,69 @@
             </div>
         </section>
 
+        <!-- Upcoming Events Section -->
+
+        <section id="up_coming_events">
+            <div class="container swiper mySwiper">
+                <h3 class="normal_heading-1">Month of March</h3>
+                <h2 class="main_heading-1">UPCOMING EVENTS</h2>
+                <div class="events_cards_container swiper-wrapper">
+                    <div class="events_card swiper-slide">
+                        <img src="/img/event1.jpg" alt="Customer">
+                        <div class="event_content">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti
+                                earum id tenetur doloremque laborum laudantium assumenda nesciunt.
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="events_card swiper-slide">
+                        <img src="/img/event2.jpg" alt="Customer">
+                        <div class="event_content">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti
+                                earum id tenetur doloremque laborum laudantium assumenda nesciunt.
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="events_card swiper-slide">
+                        <img src="/img/event3.jpg" alt="Customer">
+                        <div class="event_content">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti
+                                earum id tenetur doloremque laborum laudantium assumenda nesciunt.
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="events_card swiper-slide">
+                        <img src="/img/event4.jpeg" alt="Customer">
+                        <div class="event_content">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti
+                                earum id tenetur doloremque laborum laudantium assumenda nesciunt.
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="events_card swiper-slide">
+                        <img src="/img/event5.jpg" alt="Customer">
+                        <div class="event_content">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsa doloribus corrupti
+                                earum id tenetur doloremque laborum laudantium assumenda nesciunt.
+                            </p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+
+
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script>
 </body>
