static counter section

--- a/index.html
+++ b/index.html
@@ -313,6 +313,30 @@
             </div>
         </section>
 
+        <!-- Starter Counter Section -->
+
+        <section id="static_counter">
+            <div class="container">
+                <div class="counters">
+                    <div class="counter">
+                        <div class="num" data-ceil="40">40</div>
+                        <h2>Best Dishes</h2>
+                    </div>
+                    <div class="counter">
+                        <div class="num" data-ceil="10">10</div>
+                        <h2>Awards Won</h2>
+                    </div>
+                    <div class="counter">
+                        <div class="num" data-ceil="7">7</div>
+                        <h2>Our Chefs</h2>
+                    </div>
+                    <div class="counter">
+                        <div class="num" data-ceil="43">43</div>
+                        <h2>Daily Customers</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script>
