--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <section id="food_lover">
             <div class="container">
-                <h3 class="normal_heading-1">Food Lover</h3>
+                <h3 class="normal_heading-1">Tasty Bites</h3>
                 <h2 class="main_heading-1">RESTURANT MENU</h2>
                 <div class="food_lover_container">
                     <div class="btn_container">
@@ -220,7 +220,7 @@
 
         <section id="customer_feedback">
             <div class="container swiper mySwiper">
-                <h3 class="normal_heading-1">Food Lover</h3>
+                <h3 class="normal_heading-1">Tasty Bites</h3>
                 <h2 class="main_heading">CUSTOMER FEEDBACK</h2>
                 <div class="customer_cards_container swiper-wrapper">
                     <div class="customer_card swiper-slide">
@@ -333,6 +333,56 @@
                     <div class="counter">
                         <div class="num" data-ceil="43">43</div>
                         <h2>Daily Customers</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Chef Section -->
+
+        <section id="chef">
+            <div class="container">
+                <h3 class="normal_heading-1">Chef Team</h3>
+                <h2 class="main_heading-1">BEST CHEFS FOR YOU</h2>
+                <div class="chef_container">
+                    <div class="chef_cards">
+                        <img src="/img/chef1.png" alt="asdasd">
+                        <div class="chef_content">
+                            <h2>Rachel Allen</h2>
+                            <p class="position">Senior Chef</p>
+                            <div class="social_icons">
+                                <i class="fa fa-brands fa-facebook fa-2x"></i>
+                                <i class="fa fa-brands fa-twitter fa-2x"></i>
+                                <i class="fa fa-brands fa-instagram fa-2x"></i>
+                                <i class="fa fa-brands fa-pinterest fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chef_cards">
+                        <img src="/img/chef2.png" alt="asdasd">
+                        <div class="chef_content">
+                            <h2>Remeno Fentos</h2>
+                            <p class="position">Senior Chef</p>
+                            <div class="social_icons">
+                                <i class="fa fa-brands fa-facebook fa-2x"></i>
+                                <i class="fa fa-brands fa-twitter fa-2x"></i>
+                                <i class="fa fa-brands fa-instagram fa-2x"></i>
+                                <i class="fa fa-brands fa-pinterest fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chef_cards">
+                        <img src="/img/chef3.png" alt="asdasd">
+                        <div class="chef_content">
+                            <h2>Ted Allen</h2>
+                            <p class="position">Senior Chef</p>
+                            <div class="social_icons">
+                                <i class="fa fa-brands fa-facebook fa-2x"></i>
+                                <i class="fa fa-brands fa-twitter fa-2x"></i>
+                                <i class="fa fa-brands fa-instagram fa-2x"></i>
+                                <i class="fa fa-brands fa-pinterest fa-2x"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
