--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <h2 class="main_heading-1">BEST CHEFS FOR YOU</h2>
                 <div class="chef_container">
                     <div class="chef_cards">
-                        <img src="/img/chef1.png" alt="asdasd">
+                        <img src="/img/chef1.png" alt="Chef Rachel Allen">
                         <div class="chef_content">
                             <h2>Rachel Allen</h2>
                             <p class="position">Senior Chef</p>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                     <div class="chef_cards">
-                        <img src="/img/chef2.png" alt="asdasd">
+                        <img src="/img/chef2.png" alt="Chef Remeno Fentos">
                         <div class="chef_content">
                             <h2>Remeno Fentos</h2>
                             <p class="position">Senior Chef</p>
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                     <div class="chef_cards">
-                        <img src="/img/chef3.png" alt="asdasd">
+                        <img src="/img/chef3.png" alt="Chef Ted Allen">
                         <div class="chef_content">
                             <h2>Ted Allen</h2>
                             <p class="position">Senior Chef</p>
@@ -387,6 +387,49 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer Section -->
+
+        <section id="footer">
+            <div class="container">
+                <div class="footer_container">
+                    <div class="about_us">
+                        <h2>
+                            <img src="/img/logo.png" alt="">
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsum accusantium
+                            praesentium earum sint inventore iste quae labore saepe facilis!
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="opening_hours">
+                        <h2>Opening Hours</h2>
+                        <p class="day">MONDAY: <span>Close</span></p>
+                        <p class="day">TUE-FRI: <span>------10.00 AM 9.00 PM</span></p>
+                        <p class="day">SATURDAY: <span>------10.00 AM 9.00 PM</span></p>
+                        <p class="day">SUNDAY: <span>------10.00 AM 12.00 PM</span></p>
+                    </div>
+                    <div class="contact_us">
+                        <h2>Contact Us</h2>
+                        <h3>GET IN TOUCH</h3>
+                        <p>+61383766284</p>
+                        <p class="add">Add</p>
+                        <p>121 king Street, Melbourne Victoria 3000 Australia ANBN 11 1119 159 741</p>
+                        <p class="email">Email</p>
+                        <p>order@tastybite.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <p>
+                    Copyright 2023 &copy; Tasty Byte Restaurant
+                </p>
+            </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script>
